--- a/apiBiblio/config/packages/fos_rest.yaml
+++ b/apiBiblio/config/packages/fos_rest.yaml
@@ -3,7 +3,7 @@
 fos_rest:
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
-#    routing_loader: false
+    routing_loader: false
     view:
         view_response_listener:  true
 #    exception:
