--- a/apiBiblio/config/services.yaml
+++ b/apiBiblio/config/services.yaml
@@ -15,13 +15,13 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/Controller'
+        resource: '../src/'
         #resource:
         #'../src/Controller/'
-        #exclude:
-        #    - '../src/DependencyInjection/'
-        #    - '../src/Entity/'
-        #    - '../src/Kernel.php'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
