--- a/apiBiblio/composer.json
+++ b/apiBiblio/composer.json
@@ -12,7 +12,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
-        "friendsofsymfony/rest-bundle": "^3.5",
+        "friendsofsymfony/rest-bundle": "*",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.20",
