--- a/apiBiblio/config/services.yaml
+++ b/apiBiblio/config/services.yaml
@@ -22,6 +22,12 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    App\DataProvider\WordProvider:
+        tags:
+            - { name: api_platform.data_provider }
 
+    App\DataPersister\WordPersister:
+        tags:
+            - { name: api_platform.data_persister }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
