--- a/dict/config/packages/security.yaml
+++ b/dict/config/packages/security.yaml
@@ -31,7 +31,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/word, roles: ROLE_ADMIN }
-        - { path: ^/dictionnary, roles: ROLE_USER }s
+        - { path: ^/dictionnary, roles: ROLE_USER }
 
 when@test:
     security:
